Fri May 10 08:59:43 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_17_Test.cpp:
          Added another C++11 test case

Thu May  9 17:14:47 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Thread_Manager_Test.cpp (worker): Fixed %s to %C to work
          properly with ACE_DEBUG.  Thanks to Johnny for reporting this.

Thu May  9 14:05:28 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Thread_Manager_Test.cpp (worker): Removed unused "len"
          variable to fix a warning.  Thanks to Johnny for reporting this.

Wed May  8 19:04:22 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_Thread.inl (ACE_OS::thr_id): Fixed a warning on
          Windows.  Thanks to Johnny for reporting this.

Wed May  8 13:52:54 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_Thread.inl (ACE_OS::thr_id): Replaced the call to
          ACE_Thread::self() with ACE_OS::thr_self().  Thanks to Johnny
          Willemsen for reporting this.

Tue May  7 15:04:24 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_Thread.{h,inl}: Added a new ACE_OS::thr_id() method
          that stores a string version of the current thread id into
          buffer and returns the size of this thread id in bytes.

Thu Apr 25 16:51:06 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Svc_Handler.h:
          ace/Connector.h:
          ace/Acceptor.h:  Added template parameter documentation.
          Thanks to Clyde Gerber <clyde_gerber at symantec dot com> for
          contributing this.

Thu Apr 25 07:20:58 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
          Set MAX_DOT_GRAPH_DEPTH to 5, thanks to Clyde Gerber
          <clyde_gerber at symantec dot com> for motivating this.

Wed Apr 24 14:43:25 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
