@@ -2380,6 +2380,7 @@ Rudy Pot <rpot at aweta dot nl>
 Neil Youngman <ny at youngman dot org dot uk>
 Andreas Florath <andreas at florath dot org>
 Clyde Gerber <clyde_gerber at symantec dot com>
+George Chen <ace dot gc dot pthzfoldr at gmail dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
